[gd_scene load_steps=10 format=3 uid="uid://5q55qevow2dp"]

[ext_resource type="Script" path="res://PART - UI/SCRIPTS/menu_d'accueil.gd" id="1_0x8tf"]
[ext_resource type="FontFile" uid="uid://bn43t0lpdvrl4" path="res://GLOBAL - Font/KAPH/OpenType (.otf)/Kaph-Italic.otf" id="1_1tu1j"]

[sub_resource type="Theme" id="Theme_283wq"]
Label/colors/font_color = Color(1, 0, 0.733333, 1)
Label/colors/font_shadow_color = Color(0.501961, 0, 0.376471, 1)
Label/constants/shadow_outline_size = 20
Label/fonts/font = ExtResource("1_1tu1j")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yavl"]
content_margin_top = 7.0
bg_color = Color(0.326738, 0.26043, 0.298994, 1)
border_width_bottom = 3
border_color = Color(0.237021, 0.177179, 0.215978, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjexc"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 3
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_042p0"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 7
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 7.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ye2r5"]
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 10
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4ftm"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 3
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_ky155"]
Button/colors/font_color = Color(1, 0, 0.733333, 1)
Button/colors/font_focus_color = Color(0.86346, 2.21401e-06, 0.489164, 1)
Button/colors/font_hover_color = Color(0.862745, 0, 0.490196, 1)
Button/colors/font_pressed_color = Color(0.862745, 0, 0.490196, 1)
Button/font_sizes/font_size = 23
Button/fonts/font = ExtResource("1_1tu1j")
Button/styles/disabled = SubResource("StyleBoxFlat_3yavl")
Button/styles/focus = SubResource("StyleBoxFlat_yjexc")
Button/styles/hover = SubResource("StyleBoxFlat_042p0")
Button/styles/normal = SubResource("StyleBoxFlat_ye2r5")
Button/styles/pressed = SubResource("StyleBoxFlat_g4ftm")

[node name="Menu d\'accueil" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_0x8tf")

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
theme = SubResource("Theme_283wq")
theme_override_font_sizes/font_size = 50
text = "BARRY'S GREAT ADVENTURE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Charger la partie" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -124.0
offset_right = 160.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ky155")
text = "Charger La Partie"

[node name="Options" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -35.0
offset_right = 160.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ky155")
theme_override_font_sizes/font_size = 25
text = "Options
"

[node name="Statistiques" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 54.0
offset_right = 160.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ky155")
theme_override_font_sizes/font_size = 25
text = "Statistiques"

[node name="Progres" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 143.0
offset_right = 160.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ky155")
theme_override_font_sizes/font_size = 25
text = "Progr√®s
"

[node name="Nouvelle Partie" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 232.0
offset_right = 160.0
offset_bottom = 280.095
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ky155")
theme_override_font_sizes/font_size = 25
text = "Nouvelle Partie"

[connection signal="pressed" from="Charger la partie" to="." method="_on_charger_la_partie_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Statistiques" to="." method="_on_statistiques_pressed"]
[connection signal="pressed" from="Progres" to="." method="_on_progres_pressed"]
[connection signal="pressed" from="Nouvelle Partie" to="." method="_on_nouvelle_partie_pressed"]
